RESOLVED FIXED134943
[OSX] [WK1] Crash when exiting fullscreen
https://bugs.webkit.org/show_bug.cgi?id=134943
Summary [OSX] [WK1] Crash when exiting fullscreen
Myles C. Maxfield
Reported 2014-07-15 14:28:53 PDT
[OSX] [WK1] Crash when exiting fullscreen
Attachments
Patch (1.74 KB, patch)
2014-07-15 14:31 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2014-07-15 14:31:21 PDT
Myles C. Maxfield
Comment 2 2014-07-15 14:31:52 PDT
WebKit Commit Bot
Comment 3 2014-07-15 15:51:37 PDT
Comment on attachment 234953 [details] Patch Clearing flags on attachment: 234953 Committed r171120: <http://trac.webkit.org/changeset/171120>
WebKit Commit Bot
Comment 4 2014-07-15 15:51:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.