[OSX] [WK1] Crash when exiting fullscreen https://bugs.webkit.org/show_bug.cgi?id=134943

Reviewed by Dean Jackson.

AppKit doesn't remove a view from the Key View Loop when removing it from its superview.

This codepath is already "tested" in fullscreen/full-screen-cancel.html, but because of our
testing infrastructure, the broken codepath doesn't actually get hit in DRT. Therefore,
there is no test.

* WebView/WebFullScreenController.mm:
(-[WebFullScreenController enterFullScreen:]):


Canonical link: https://commits.webkit.org/152878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171120 268f45cc-cd09-0410-ab3c-d52691b4dbfc